Se modifico el index.html y se agregaron bocetos en la carpeta Documentos

--- a/Plantilla/index.html
+++ b/Plantilla/index.html
@@ -1,13 +1,47 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Yaf inmobiliaria</title>
-</head>
-<body>
-    <h1>Bienvenidos a el comienzo de Yaf inmobiliaria</h1>
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-UA-compatible" content="ie=edge">
+    <title>Inmobiliaria</title>
+  </head>
+  <body>
+        <section class="Bienvenidos">
+            <header class="encabezado" role="banner">
+                <a href="index.html">
+                    <img src="Imagenes/logo.svg" alt="Logo">
+                </a> 
+                <button type="button" class="boton_buscar">buscar</button>
+                <button type="button" class="boton_menu">Menu</button>      
+                <form action="#" id="bloque_buscar">
+                    <div class="contenedor-bloque_buscar">
+                        <input type=" text" placeholder="Buscar...">
+                        <input type="submit" value="Buscar">
+                    </div>
+                </form>
+                <nav id="menu_principal">
+                    <ul>
+                        <li class="activo"><a href="index.html">Inicio</a></li>
+                        <li><a href="servicios.html">servicios</a></li>
+                        <li><a href="inmuebles.html">inmuebles</a></li>
+                        <li><a href="contacto.html">contacto</a></li>
+                        <li><a href="login.html">Login</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="texto-encabezado">
+                 <h1>Encuentra la mejor Vivienda para ti! </h1>
+                 <p>La comodidad es algo que no te puedes dar el lujo de negar</p>
+                 <a href="login.html">Registrate</a>
+            </div>
+            <div class="div-flecha_bajar">
+                <a href="#">boton_bajar</a>
+            </div>
+        
+        </section>
+
+ 
+  </body>
 </html>
