Se modifico el index.html se le agregaron 3 secciones mas

--- a/Plantilla/index.html
+++ b/Plantilla/index.html
@@ -37,11 +37,75 @@
                  <a href="login.html">Registrate</a>
             </div>
             <div class="div-flecha_bajar">
-                <a href="#">boton_bajar</a>
+                <a href="presentacion">boton_bajar</a>
             </div>
-        
         </section>
+        <section class="presentacion" id="presentacion">
+            <h2>¿Quienes somos? </h2>
+            <p>Yaf es una empresa que se encarga de buscar por ti, ayudandote con varios de nuestros 
+                servicios como el amplio catalogo de inmubles que tenemos donde podras encontrar desde 
+                casas para familias completas o apartamentos para solteros 
+            </p>
+            <p>Unete a esta gran familia que busca tu comidad con obciones de agendar la citas con solo un click 
+                queremos lo mejor para, ya que tu eres especial para nuestra compañia no esperes mas registrate y encuentra 
+                la mejor opcion 
+            </p>
+            <img src="#" alt="Yaf">
+        </section>
+        <section class="porque-somos-tu-mejor-eleccion">
+            <h2>Ventajas que tienes con nosotros</h2>
+            <p>Yaf Inmobiliaria lo mejor para ti</p>
+            <ul>
+                <li>
+                    <img src="#" alt="imagen">
+                    <h4>Creacion de citas</h4>
+                </li>
+                <li>
+                    <img src="#" alt="imagen">
+                    <h4>Creacion de citas</h4>
+                </li>
+                <li>
+                    <img src="#" alt="imagen">
+                    <h4>Creacion de citas</h4>
+                </li>       
+            </ul>
+            <ul>
+                <li>
+                    <img src="#" alt="imagen">
+                    <h4>Creacion de citas</h4>
+                </li>
+                <li>
+                    <img src="#" alt="imagen">
+                    <h4>Creacion de citas</h4>
+                </li>
+                <li>
+                    <img src="#" alt="imagen">
+                    <h4>Creacion de citas</h4>
+                </li>       
+            </ul>
+            <ul>
+                <li>
+                    <img src="#" alt="imagen">
+                    <h4>Creacion de citas</h4>
+                </li>
+                <li>
+                    <img src="#" alt="imagen">
+                    <h4>Creacion de citas</h4>
+                </li>
+                <li>
+                    <img src="#" alt="imagen">
+                    <h4>Creacion de citas</h4>
+                </li>       
+                </ul>
+        </section>
+        <footer class="pie-de-pag" role="contentinfo">
+            <p>Desarrollado por yaf 2019</p>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">youtube</a></li>
+                <li><a href="#">pagina</a></li>
+            </ul>
 
- 
+        </footer>
   </body>
 </html>
