--- a/Plantilla/index.html
+++ b/Plantilla/index.html
@@ -6,51 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-UA-compatible" content="ie=edge">
     <title>Inmobiliaria</title>
+    <!--Archivos css-->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/estilos.css">
+    <!--iconos-->
+    <link  href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-        <section class="Bienvenidos">
-            <header class="encabezado" role="banner">
-                <a href="index.html">
-                    <img src="Imagenes/logo.svg" alt="Logo">
-                </a> 
-                <button type="button" class="boton_buscar">buscar</button>
-                <button type="button" class="boton_menu">Menu</button>      
-                <form action="#" id="bloque_buscar">
-                    <div class="contenedor-bloque_buscar">
-                        <input type=" text" placeholder="Buscar...">
-                        <input type="submit" value="Buscar">
-                    </div>
-                </form>
-                <nav id="menu_principal">
-                    <ul>
-                        <li class="activo"><a href="index.html">Inicio</a></li>
-                        <li><a href="servicios.html">servicios</a></li>
-                        <li><a href="inmuebles.html">inmuebles</a></li>
-                        <li><a href="contacto.html">contacto</a></li>
-                        <li><a href="login.html">Login</a></li>
-                    </ul>
-                </nav>
+       
+        <section class="bienvenidos">
+            <header class="encabezado navbar fixed-top " role="banner">
+                <div class="container">
+                    <a href="index.html" class="logo">
+                        <img src="imagenes/logo.svg" alt="Logo">
+                    </a>
+                    <button type="button" class="boton_buscar" data-toggle="collapse" data-target="#bloque_buscar" aria-expanded="false">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
+                    <button type="button" class="boton_menu" data-toggle="collapse" data-target="#menu_principal" aria-expanded="false">
+                        <i class="fa fa-th-list" aria-hidden="true"></i>
+                    </button>      
+                    <form action="#" id="bloque_buscar" class="collapse">
+                        <div class="contenedor-bloque_buscar">
+                            <input type=" text" placeholder="Buscar...">
+                            <input type="submit" value="Buscar">
+                        </div>
+                    </form>
+                    <nav id="menu_principal" class="collapse">
+                        <ul>
+                            <li class="activo"><a href="index.html">Inicio</a></li>
+                            <li><a href="servicios.html">servicios</a></li>
+                            <li><a href="inmuebles.html">inmuebles</a></li>
+                            <li><a href="contacto.html">contacto</a></li>
+                            <li><a href="login.html">Login</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </header>
-            <div class="texto-encabezado">
-                 <h1>Encuentra la mejor Vivienda para ti! </h1>
-                 <p>La comodidad es algo que no te puedes dar el lujo de negar</p>
-                 <a href="login.html">Registrate</a>
+            <div class="texto-encabezado text-xs-center">
+                <div class="container">
+                    <h1 class="display-3">Encuentra la mejor Vivienda para ti! </h1>
+                    <p>La comodidad es algo que no te puedes dar el lujo de negar</p>
+                    <a href="login.html " class="btn-primary btn-lg">Registrate</a>
+                </div>
             </div>
-            <div class="div-flecha_bajar">
-                <a href="presentacion">boton_bajar</a>
+            <div class="div-flecha_bajar" >
+                <a href="presentacion">
+                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                    
+                </a>
             </div>
         </section>
-        <section class="presentacion" id="presentacion">
-            <h2>¿Quienes somos? </h2>
-            <p>Yaf es una empresa que se encarga de buscar por ti, ayudandote con varios de nuestros 
-                servicios como el amplio catalogo de inmubles que tenemos donde podras encontrar desde 
-                casas para familias completas o apartamentos para solteros 
-            </p>
-            <p>Unete a esta gran familia que busca tu comidad con obciones de agendar la citas con solo un click 
-                queremos lo mejor para, ya que tu eres especial para nuestra compañia no esperes mas registrate y encuentra 
-                la mejor opcion 
-            </p>
-            <img src="#" alt="Yaf">
+        <section class="presentacion " id="presentacion">
+            <div class="container">
+               <a ><h2 class="display-3">¿Quienes somos? </h2></a> 
+                 <div class="row">
+                     <div class="col-xs-12">
+                        <p>
+                            Yaf es una empresa que se encarga de buscar por ti, ayudandote con varios de nuestros 
+                            servicios como el amplio catalogo de inmubles que tenemos donde podras encontrar desde 
+                            casas para familias completas o apartamentos para solteros 
+                        </p>
+                        <p>
+                            Unete a esta gran familia que busca tu comidad con obciones de agendar la citas con solo un click 
+                            queremos lo mejor para, ya que tu eres especial para nuestra compañia no esperes mas registrate y encuentra 
+                            la mejor opcion 
+                        </p> 
+                    </div>       
+                    <div class="col-md-12"> 
+                            <img src="imagenes/presentacion.svg" alt="yaf">                       
+                    </div>   
+                </div>
+            </div>
         </section>
         <section class="porque-somos-tu-mejor-eleccion">
             <h2>Ventajas que tienes con nosotros</h2>
@@ -107,5 +134,8 @@
             </ul>
 
         </footer>
+        <!--Archivos js-->
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
