Se agrego carpeta de documentacion, carpeta para trabajar angular y modificaciones de plantilla

--- a/Plantilla/agenda.html
+++ b/Plantilla/agenda.html
@@ -34,6 +34,7 @@
                     <nav id="menu_principal" class="collapse">
                         <ul>
                             <li class="activo"><a href="index.html">Inicio</a></li>
+                            <li><a href="agenda.html">Citas</a></li>
                             <li><a href="servicios.html">servicios</a></li>
                             <li><a href="inmuebles.html">inmuebles</a></li>
                             <li><a href="contacto.html">contacto</a></li>
@@ -54,11 +55,17 @@
                 <button type="button " class="consulta btn-outline-primary">
                     Agenda
                 </button>
-                <button type="button" class="Agendar btn-outline-primary">
-                    Agendar
-                    </button>
             </section>
 
-          
+            <footer class="piedepag " role="contentinfo">
+                <div class="container">
+                    <p>Desarrollado por yaf 2019</p>
+                    <ul class="redes">
+                        <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-ils" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+            </footer>  
 </body>
 </html>
