--- a/Plantilla/index.html
+++ b/Plantilla/index.html
@@ -36,9 +36,10 @@
                     <nav id="menu_principal" class="collapse">
                         <ul>
                             <li class="activo"><a href="index.html">Inicio</a></li>
+                            <li><a href="agenda.html">Citas</a></li>
                             <li><a href="servicios.html">servicios</a></li>
                             <li><a href="inmuebles.html">inmuebles</a></li>
-                            <li><a href="contacto.html">contacto</a></li>
+                            <li><a href="#who">contacto</a></li>
                             <li><a href="login.html">Login</a></li>
                         </ul>
                     </nav>
@@ -79,53 +80,6 @@
                     </div>   
                 </div>
             </div>
-        </section>
-        <section class="porque-somos-tu-mejor-eleccion">
-            <h2>Ventajas que tienes con nosotros</h2>
-            <p>Yaf Inmobiliaria lo mejor para ti</p>
-            <ul>
-                <li>
-                    <img src="#" alt="imagen">
-                    <h4>Creacion de citas</h4>
-                </li>
-                <li>
-                    <img src="#" alt="imagen">
-                    <h4>Creacion de citas</h4>
-                </li>
-                <li>
-                    <img src="#" alt="imagen">
-                    <h4>Creacion de citas</h4>
-                </li>       
-            </ul>
-            <ul>
-                <li>
-                    <img src="#" alt="imagen">
-                    <h4>Creacion de citas</h4>
-                </li>
-                <li>
-                    <img src="#" alt="imagen">
-                    <h4>Creacion de citas</h4>
-                </li>
-                <li>
-                    <img src="#" alt="imagen">
-                    <h4>Creacion de citas</h4>
-                </li>       
-            </ul>
-            <ul>
-                <li>
-                    <img src="#" alt="imagen">
-                    <h4>Creacion de citas</h4>
-                </li>
-                <li>
-                    <img src="#" alt="imagen">
-                    <h4>Creacion de citas</h4>
-                </li>
-                <li>
-                    <img src="#" alt="imagen">
-                    <h4>Creacion de citas</h4>
-                </li>       
-                </ul>
-                </body>
         </section>
         <!-- quienes somos-->
         <section>
