se implemento la plantilla al angular

--- a/Plantilla/index.html
+++ b/Plantilla/index.html
@@ -15,7 +15,7 @@
   <body>
        
         <section class="bienvenidos">
-            <header class="encabezado navbar fixed-top " role="banner">
+            <header class="encabezado navbar navbar-light " role="banner">
                 <div class="container">
                     <a href="index.html" class="logo">
                         <img src="imagenes/logo.svg" alt="Logo">
